lib/ffi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<FFIInitResponse Function(ffi.Pointer<ffi.Char>)>()
external FFIInitResponse init(ffi.Pointer<ffi.Char> data_dir);

@ffi.Native<
  FFICreateInstanceResponse Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external FFICreateInstanceResponse create_instance(
  ffi.Pointer<ffi.Char> model_path,
  ffi.Pointer<ffi.Char> config_path,
);

@ffi.Native<FFISpeakResponse Function(ffi.Int32, ffi.Pointer<ffi.Char>)>()
external FFISpeakResponse speak(int fd, ffi.Pointer<ffi.Char> text);

final class FFIInitResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Char> error_message;
}

final class FFICreateInstanceResponse extends ffi.Struct {
  @ffi.Int32()
  external int fd;

  external ffi.Pointer<ffi.Char> error_message;
}

final class FFISpeakResponse extends ffi.Struct {
  external ffi.Pointer<ffi.Char> error_message;
}
